syntax = "proto3";

option go_package = "distributed/api/runner";

package runner;

// The runner service definition.
service Runner {
  rpc runAlgo (RunRequest) returns (stream NodeData) {}
}

// The request message containing alogritm name and number of nodes.
message RunRequest {
  string name = 1;
  int32 nodes = 2;
}

// TODO: How to identify termination?
// The response message containing the nodes data.
message NodeData {
    int32 sender_id = 1;
    int32 receiver_id = 2;
    int32 round = 3;
    int32 message = 4;
}
